<resources>
    <string name="app_name">TestN2</string>
    <string name="button1">搜索设备</string>
    <string name="button2">打开可被发现</string>
    <string name="sw1">蓝牙开关    </string>
    <string name="show1">设备列表</string>
    <string name="conn1">蓝牙状态:  </string>
    <string name="conn2">已连接</string>
    <string name="switch2">切换状态</string>
    <string name="hint1">触摸发送坐标</string>
    <string name="show3">发送数据</string>
    <string name="send1">输入发送数据</string>
    <string name="button3">发送参数</string>
    <string name="divide1">选择模式</string>
    <string name="divide2">触摸划区</string>
    <string name="divide3">选图显示</string>
    <string name="pic1">图片1</string>
    <string name="pic2">图片2</string>
    <string name="pic3">图片3</string>
    <string name="pic4">图片4</string>
    <string name="pic5">图片5</string>
    <string name="pic6">图片6</string>
</resources>