<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BTRW"
    android:background="@color/teal_200">


    <TextView
        android:id="@+id/conntv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:text="@string/conn2"
        android:paddingStart="5dp"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/conntv1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/conntv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conn1"
        android:textSize="32sp"
        android:gravity="center_horizontal"
        android:background="@color/purple_200"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />




    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/button3"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/conntv2"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:id="@+id/conntv4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/show3"
        android:textSize="30sp"
        android:background="@color/teal_200"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/et1"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/hint1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="50dp"
        android:background="@color/white"
        android:text="@string/hint1"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="576:1152"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/conntv1"
        />
    <EditText
        android:id="@+id/et1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/send1"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button4"
        android:layout_marginStart="10dp"
        />
    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/show3"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/conntv4"
        />

















</android.support.constraint.ConstraintLayout>