<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/dtv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:text="@string/divide1"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/dbutton1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/teal_200"
        android:text="@string/divide2"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/dtv1"
        app:layout_constraintBottom_toTopOf="@id/dbutton2"
        />

    <Button
        android:id="@+id/dbutton2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/teal_200"
        android:text="@string/divide3"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/dbutton1"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>